# hts-time

./: .gitignore  COPYING  NOTICE  README.md  com.storcke64.hts-time.desktop  com.storcke64.hts_time.desktop  com.storcke64.hts_time.json  com.storcke64.hts_time.json~  hts-time-universal.flatpak  hts-time.1  hts_settings.ini  index.html  meson.build
data/: com.storcke64.hts-time.metainfo.xml
src/: cli-test.c  hts-logic.c  logic.h  main.c  meson.build  resources.xml
